// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with one expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $4.00
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with one expenses 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $40,045,648,793.21
  </h1>
</div>
`;
